--- a/cleanupgreen/style.css
+++ b/cleanupgreen/style.css
@@ -1,7 +1,7 @@
 /*!
 Theme Name: cleanupgreen
 Theme URI: http://underscores.me/
-Author: Underscores.me
+Author: Manni and Joey
 Author URI: http://underscores.me/
 Description: Description
 Version: 1.0.0
