updated-screenshot-png

--- a/cleanupgreen/style.css
+++ b/cleanupgreen/style.css
@@ -1,9 +1,9 @@
 /*!
 Theme Name: cleanupgreen
 Theme URI: http://underscores.me/
-Author: Manni and Joey
+Author: Manni and joeyy
 Author URI: http://underscores.me/
-Description: Description
+Description: This is custom theme having static content for a Cleanup-Green
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
