--- a/style.css
+++ b/style.css
@@ -613,6 +613,7 @@ div.max-width-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
+    background-color: pink;
 }
 
 .cost-card {
