--- a/style.css
+++ b/style.css
@@ -1291,6 +1291,17 @@ cite {
 
 
 /* Contact */
+
+.contact h2 {
+    font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
+    font-size: 2rem;
+}
+
+.contact p {
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+    font-size: 1.25rem;
+}
+
 .contact-flex {
     display: flex;
     justify-content: center;
