--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ section {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    max-width: 35%;
+    max-width: 80%;
 }
 
 .image-content img {
@@ -741,7 +741,7 @@ cite {
 }
 
 .product-image {
-    height: 250px;
+    height: 350px;
     overflow: hidden;
 }
 
@@ -1285,8 +1285,11 @@ cite {
         height: 1.75rem;
     }
 }
-
-
+/* shop page */
+.ast-woocommerce-container{
+    display: flex;
+    justify-content: center;
+}
 /* Contact */
 .contact-flex {
     display: flex;
@@ -1447,6 +1450,7 @@ cite {
 /* Product Grid Layout */
 .woocommerce ul.products {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 20px;
+    padding: 5rem 0rem;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 50px;
 }
