--- a/style.css
+++ b/style.css
@@ -1375,6 +1375,10 @@ cite {
     margin-bottom: 15px;
 }
 
+.contact-us-form {
+    flex: 1;
+}
+
 .send-button {
     width: 100%;
     padding: 12px;
