--- a/style.css
+++ b/style.css
@@ -255,9 +255,13 @@ section {
 
 .menu-toggle {
     display: none;
-    background: none;
+    background: var(--primary-2) !important;
+    padding: 0.3rem 0.5rem;
     border: none;
     cursor: pointer;
+}
+.menu-toggle:hover{
+    background: var(--primary-1);
 }
 
 /* ==========================================================================
@@ -417,7 +421,7 @@ section {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    max-width: 35%;
+    max-width: 80%;
 }
 
 .image-content img {
@@ -937,6 +941,11 @@ cite {
     
     .main-navigation.toggled ul {
         display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .menu-item-text{
+        padding: 0rem 9rem;
     }
     
     .hero-content {
